@@ -27,9 +27,10 @@ GtkWidget * tr_prefs_dialog_new( GObject * core, GtkWindow * parent );
 #define PREF_KEY_OPTIONS_PROMPT         "show-options-window"
 #define PREF_KEY_DOWNLOAD_DIR           "default-download-directory"
 #define PREF_KEY_OPEN_DIALOG_FOLDER     "open-dialog-folder"
-#define PREF_KEY_INHIBIT_HIBERNATION    "inhibit-hibernation"
+#define PREF_KEY_ALLOW_HIBERNATION      "allow-hibernation"
 #define PREF_KEY_DIR_WATCH              "watch-folder"
 #define PREF_KEY_DIR_WATCH_ENABLED      "watch-folder-enabled"
+#define PREF_KEY_TRAY_ICON_ENABLED      "tray-icon-enabled"
 #define PREF_KEY_START                  "start-added-torrents"
 #define PREF_KEY_TRASH_ORIGINAL         "trash-original-torrent-files" 
 #define PREF_KEY_PEER_SOCKET_TOS        "peer-socket-tos"
